--- a/views/index.html
+++ b/views/index.html
@@ -25,7 +25,7 @@
       </div>
       <div class="footer">
         <p>
-          by <a href="https://www.freecodecamp.org">freeCodeCamp</a>
+          Designed and Coded by: <a href="https://codepen.io/lace1010/full/dyXXYJE">Hunter Lacefield</a>
         </p>
       </div>
    </body>
